# CMakeLists.txt

SET (FFPRESET_FILES "")

IF (INSTALL_FFPRESETS AND FFMPEG_SHAREDIR)
  FILE(GLOB FFPRESET_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.ffpreset")
  INSTALL (FILES ${FFPRESET_FILES}
    DESTINATION ${FFMPEG_SHAREDIR}
    COMPONENT ffpreset
  )
ELSE (INSTALL_FFPRESETS AND FFMPEG_SHAREDIR)
  FILE(GLOB FFPRESET_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*QX11Grab.ffpreset")
  INSTALL (FILES ${FFPRESET_FILES}
    DESTINATION ${FFMPEG_SHAREDIR}
    COMPONENT ffpreset
  )
ENDIF (INSTALL_FFPRESETS AND FFMPEG_SHAREDIR)

## EOF
