# CMakeLists.txt
#
# QX11Grab Plugin Interface
#

SET (INCLUDE_NAME_DIR "qx11grab-0.4")

CONFIGURE_FILE (interface.h.cmake 
  ${CMAKE_CURRENT_SOURCE_DIR}/interface.h
)

CONFIGURE_FILE (qx11grab.pc.cmake
  ${CMAKE_CURRENT_BINARY_DIR}/qx11grab.pc
)

SET (interface_SOURCES
  qx11grabplugins.cpp
)

SET (interface_HEADERS
  interface.h
  qx11grabplugins.h
)

QT4_WRAP_CPP (interface_MOC ${interface_HEADERS})

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${QX11GRAB_INCLUDES}
)

ADD_LIBRARY (qx11grabinterface SHARED
  ${interface_MOC}
  ${interface_HEADERS}
  ${interface_SOURCES}
)

SET_TARGET_PROPERTIES (qx11grabinterface PROPERTIES
  VERSION "${QX11GRAB_VERSION_MAJOR}.${QX11GRAB_VERSION_MINOR}.${QX11GRAB_VERSION_RELEASE}"
  SOVERSION ${QX11GRAB_VERSION_MAJOR}
  OUTPUT_NAME ${INCLUDE_NAME_DIR}
  LINKER_LANGUAGE CXX
  COMPILE_FLAGS "${LIB_FPIC_CXXFLAGS}"
  LINK_FLAGS "${LIB_RDYNAMIC_CXXFLAGS}"
)

TARGET_LINK_LIBRARIES (qx11grabinterface
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
  ${QT_QTXML_LIBRARY}
)

TARGET_LINK_LIBRARIES (qx11grabinterface
  LINK_INTERFACE_LIBRARIES
  ${QT_QTGUI_LIBRARY}
)

INSTALL (TARGETS qx11grabinterface
  LIBRARY DESTINATION lib${LIB_SUFFIX}/
)

INSTALL (FILES 
  ${interface_HEADERS}
  DESTINATION include/${INCLUDE_NAME_DIR}
)

INSTALL (FILES 
  ${CMAKE_CURRENT_BINARY_DIR}/qx11grab.pc
  DESTINATION lib${LIB_SUFFIX}/pkgconfig
)

ADD_SUBDIRECTORY (unsharp)

## EOF
 
