EXTRA_DIST = \
	apply.png \
	convert.png \
	fail.png \
	find.png \
	folder_normal.png \
	folder_video.png \
	grid.png \
	help.png \
	maximize.png \
	minimize.png \
	pause.png \
	qx11grab-64.png \
	qx11grab.png \
	recording.png \
	record.png \
	running.png \
	run.png \
	stop.png \
	utilities.png \
	view.png \
	window.png
